@@ -57,19 +57,10 @@
        member corporations:
        <ul>
         <li>
-         Borland
-        </li>
-        <li>
-         Compaq
-        </li>
-        <li>
          Debian Project
         </li>
         <li>
          Free Software Foundation
-        </li>
-        <li>
-         Gnumatic
         </li>
         <li>
          Hewlett-Packard
@@ -81,9 +72,6 @@
          MandrakeSoft
         </li>
         <li>
-         Object Management Group
-        </li>
-        <li>
          Red Flag Linux
         </li>
         <li>
@@ -93,10 +81,7 @@
          Sun Microsystems
         </li>
         <li>
-         TurboLinux
-        </li>
-        <li>
-         VA Linux
+         Wipro
         </li>
         <li>
          Ximian
