@@ -1,3 +1,9 @@
+2003-04-03  Steve Fox  <drfickle@k-lug.org>
+
+  * advisory_board.html
+
+  Update Advisory Board members list
+
 2003-03-25  Steve Fox  <drfickle@k-lug.org>
 
 	* index.html
